--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Menyembunyikan scrollbar untuk Chrome, Safari dan Opera */
+.hide-scrollbar-crhome::-webkit-scrollbar {
+  display: none;
+}
+
+/* Menyembunyikan scrollbar untuk Internet Explorer, Edge and Firefox */
+.hide-scrollbar-ms {
+  -ms-overflow-style: none;  /* Internet Explorer dan Edge */
+  scrollbar-width: none;  /* Firefox */
+}
